# task-mcp-cli-tool

./: CLAUDE.md  README.md  main.py  pyproject.toml  reset.sql  schema.sql
learning/: greet.py
taskcli/: cli.py  db.py  models.py
taskcli/commands/: project.py  task.py
